--- a/app/index.html
+++ b/app/index.html
@@ -11,5 +11,6 @@
     <div className="main"></div>
     <div className="info"></div>
     <div className="quote"></div>
+    <footer></footer>
   </body>
 </html>
