added links and "logo"

--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project</title>
   </head>
   <body>
-    <div className="header"></div>
+    <div className="header">
+      <div className="logo"></div>
+      <div className="links">
+        <a href="https://google.com/"> header link one</a>
+        <a href="https://google.com/"> header link two</a>
+        <a href="https://google.com/"> header link three</a>
+      </div>
+    </div>
     <div className="main"></div>
     <div className="info"></div>
     <div className="quote"></div>
