--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div className="header">
-      <div className="logo"></div>
+      <div className="logo"><h1>Header logo</h1></div>
       <div className="links">
         <a href="https://google.com/"> header link one</a>
         <a href="https://google.com/"> header link two</a>
