--- a/app/index.html
+++ b/app/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Project</title>
   </head>
   <body>
-    <div className="header">
-      <div className="logo"><h1>Header logo</h1></div>
-      <div className="links">
+    <div class="header">
+      <h1>Header logo</h1>
+      <div class="links">
         <a href="https://google.com/"> header link one</a>
         <a href="https://google.com/"> header link two</a>
         <a href="https://google.com/"> header link three</a>
       </div>
     </div>
-    <div className="main"></div>
-    <div className="info"></div>
-    <div className="quote"></div>
+    <div class="main"></div>
+    <div class="info"></div>
+    <div class="quote"></div>
     <footer></footer>
   </body>
 </html>
