--- a/app/index.html
+++ b/app/index.html
@@ -9,14 +9,20 @@
   </head>
   <body>
     <div class="header">
-      <h1>Header logo</h1>
+      <div class="logo"><h1>Header logo</h1></div>
       <div class="links">
-        <a href="https://google.com/"> header link one</a>
-        <a href="https://google.com/"> header link two</a>
-        <a href="https://google.com/"> header link three</a>
+        <a href="https://google.com/"><button>header link one</button></a>
+        <a href="https://google.com/"><button>header link two</button></a>
+        <a href="https://google.com/"><button>header link three</button></a>
       </div>
     </div>
-    <div class="main"></div>
+    <div class="main">
+      <div class="mainText"><h1 class="text">This website is awesome</h1><p>This website has some subtext that goes here under the 
+        main title. It's smaller font and the color is lower
+        contrast
+      </p></div><button class="signUp">Sign up</button></div>
+      <div class="mainPlaceholder"></div>
+    </div>
     <div class="info"></div>
     <div class="quote"></div>
     <footer></footer>
