--- a/app/index.html
+++ b/app/index.html
@@ -17,10 +17,10 @@
       </div>
     </div>
     <div class="main">
-      <div class="mainText"><h1 class="text">This website is awesome</h1><p>This website has some subtext that goes here under the 
+      <div class="mainText"><h1 class="mainTitle">This website is awesome</h1><p class="mainSubtext">This website has some subtext that goes here under the 
         main title. It's smaller font and the color is lower
         contrast
-      </p></div><button class="signUp">Sign up</button></div>
+      </p></div><button class="mainSignup">Sign up</button></div>
       <div class="mainPlaceholder"></div>
     </div>
     <div class="info"></div>
