--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="main">
-      <div class="mainText"><h1 class="text">This website is awesome</h1><p>This website has some subtext that goes here under the 
+      <div class="mainText"><h1 class="text">This website is awesome</h1><p class="paragrafh">This website has some subtext that goes here under the 
         main title. It's smaller font and the color is lower
         contrast
       </p></div><button class="signUp">Sign up</button></div>
