added some line breaks and css

--- a/app/index.html
+++ b/app/index.html
@@ -17,10 +17,9 @@
       </div>
     </div>
     <div class="main">
-      <div class="mainText"><h1 class="mainTitle">This website is awesome</h1><p class="mainSubtext">This website has some subtext that goes here under the 
-        main title. It's smaller font and the color is lower
-        contrast
-      </p></div><button class="mainSignup">Sign up</button></div>
+      <div class="mainText"><h1 class="mainTitle">This website is <br> awesome</br></h1><p class="mainSubtext">This website has some subtext that goes here under the<br> 
+        main title. It's smaller font and the color is lower</br>contrast
+      </p><div><button class="mainSignup">Sign up</button></div></div>
       <div class="mainPlaceholder"></div>
     </div>
     <div class="info"></div>
