--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="header">
-      <div class="logo"><h1>Header logo</h1></div>
+      <div class="logo"><h1 class="logoText">Header logo</h1></div>
       <div class="links">
         <a href="https://google.com/"><button>header link one</button></a>
         <a href="https://google.com/"><button>header link two</button></a>
@@ -20,7 +20,7 @@
       <div class="mainText"><h1 class="mainTitle">This website is <br> awesome</br></h1><p class="mainSubtext">This website has some subtext that goes here under the<br> 
         main title. It's smaller font and the color is lower</br>contrast
       </p><div><button class="mainSignup">Sign up</button></div></div>
-      <div class="mainPlaceholder"></div>
+      <div class="mainPlaceholder"><p class="placeholderText">this is a placeholder for an image</p></div>
     </div>
     <div class="info"></div>
     <div class="quote"></div>
